--- a/corpses/templates/corpses.html
+++ b/corpses/templates/corpses.html
@@ -12,7 +12,7 @@
       <div class="container bg-dark justify-content-center text-white">
          <script type="text/javascript" src="{{ url_for('static', filename='bootstrap-4.5.2-dist/js/bootstrap.min.js') }}"></script>
          <form action = "/result" method = "POST">
-           <p>Corpses go here: ( [CTRL] + [A], [CTRL] + [V] )</p>
+           <p>Corpses go here: ( [CTRL] + [A], [CTRL] + [C], [CTRL] + [V] )</p>
            <textarea id="Corpses" name="Corpses" rows="25" cols="80"></textarea>
            <p><input type = "submit" value = "submit" class="btn btn-primary"/></p>
          </form>
